# dashboard-tags-suggestion-llm

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  config_git_lfs.sh  docker-compose.yml  main.py  pyproject.toml  run_dashboard.sh
.github/workflows/: deploy.yml
analysis/: analysis_dataframes_20250923_110250.pkl  analysis_results_20250923_110250.json  analysis_results_20250923_174440.json  analysis_summary_20250923_110250.txt  analysis_summary_20250923_174440.txt  test_samples.csv  train_examples.csv
data/: test.csv  train.csv
src/lib/: LLMClassifier.py  data_loader.py  exploratory_analysis.py
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
