[project]
name = "dashboard-tags-suggestion"
version = "0.1.0"
description = "Dashboard interactif pour l'analyse exploratoire et la suggestion de tags StackOverflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.49.1",
    "plotly>=5.17.0",
    "dash>=2.17.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "wordcloud>=1.9.2",
    "scikit-learn>=1.3.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "nltk>=3.8.1",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
]
